# crawler-ai-task

./: .env.example  .gitignore  DECISIONS.md  README.md  pyproject.toml
eval/: evaluate.py  gold.json
newskg/: __init__.py  api.py  config.py  crawler.py  models.py  pipeline.py  resolution.py  store.py
newskg/extraction/: __init__.py  base.py  heuristic.py  llm_extractor.py
newskg/sources/: __init__.py  base.py  registry.py  techcrunch.py
tests/: conftest.py  test_api.py  test_eval.py  test_resolution.py  test_store.py  test_techcrunch_parser.py
tests/fixtures/: article.html  listing.html
