[project]
name = "news-kg"
version = "0.1.0"
description = "News -> People Knowledge Graph + HTTP API"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "selectolax>=0.3.21",
    "pydantic>=2.6",
    "anthropic>=0.39",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Put the project root on sys.path so tests can import the top-level
# `eval` and `newskg` packages without installing the project first.
pythonpath = "."

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["newskg*"]
